[gd_scene load_steps=2 format=3 uid="uid://dgifiqxllnfcb"]

[ext_resource type="Script" path="res://TestAll.gd" id="1_32pxe"]

[node name="TestAll" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="PanelContainer" parent="Margin"]
offset_left = 16.0
offset_top = 16.0
offset_right = 1008.0
offset_bottom = 584.0

[node name="Center" type="CenterContainer" parent="Margin/Panel"]
offset_right = 992.0
offset_bottom = 568.0

[node name="Grid" type="GridContainer" parent="Margin/Panel/Center"]
offset_left = 254.0
offset_top = 42.0
offset_right = 738.0
offset_bottom = 526.0
columns = 2
script = ExtResource( "1_32pxe" )

[node name="Panel1" type="Panel" parent="Margin/Panel/Center/Grid"]
minimum_size = Vector2(240, 240)
offset_right = 240.0
offset_bottom = 240.0

[node name="ColorRect1" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 1.0
offset_right = 20.0
offset_bottom = 21.0

[node name="ColorRect2" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 20.0
offset_right = 20.0
offset_bottom = 40.0

[node name="ColorRect3" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 40.0
offset_right = 20.0
offset_bottom = 60.0

[node name="ColorRect4" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 60.0
offset_right = 20.0
offset_bottom = 80.0

[node name="ColorRect5" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 80.0
offset_right = 20.0
offset_bottom = 100.0

[node name="ColorRect6" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 100.0
offset_right = 20.0
offset_bottom = 120.0

[node name="ColorRect7" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 120.0
offset_right = 20.0
offset_bottom = 140.0

[node name="ColorRect8" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 140.0
offset_right = 20.0
offset_bottom = 160.0

[node name="ColorRect9" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 160.0
offset_right = 20.0
offset_bottom = 180.0

[node name="ColorRect10" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 180.0
offset_right = 20.0
offset_bottom = 200.0

[node name="ColorRect11" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 200.0
offset_right = 20.0
offset_bottom = 220.0

[node name="ColorRect12" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel1"]
offset_top = 220.0
offset_right = 20.0
offset_bottom = 240.0

[node name="Label" type="Label" parent="Margin/Panel/Center/Grid/Panel1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
text = "In"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="Margin/Panel/Center/Grid"]
minimum_size = Vector2(240, 240)
offset_left = 244.0
offset_right = 484.0
offset_bottom = 240.0

[node name="ColorRect1" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_right = 20.0
offset_bottom = 20.0

[node name="ColorRect2" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 20.0
offset_right = 20.0
offset_bottom = 40.0

[node name="ColorRect3" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 40.0
offset_right = 20.0
offset_bottom = 60.0

[node name="ColorRect4" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 60.0
offset_right = 20.0
offset_bottom = 80.0

[node name="ColorRect5" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 80.0
offset_right = 20.0
offset_bottom = 100.0

[node name="ColorRect6" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 100.0
offset_right = 20.0
offset_bottom = 120.0

[node name="ColorRect7" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 120.0
offset_right = 20.0
offset_bottom = 140.0

[node name="ColorRect8" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 140.0
offset_right = 20.0
offset_bottom = 160.0

[node name="ColorRect9" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 160.0
offset_right = 20.0
offset_bottom = 180.0

[node name="ColorRect10" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 180.0
offset_right = 20.0
offset_bottom = 200.0

[node name="ColorRect11" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 200.0
offset_right = 20.0
offset_bottom = 220.0

[node name="ColorRect12" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel2"]
offset_top = 220.0
offset_right = 20.0
offset_bottom = 240.0

[node name="Label" type="Label" parent="Margin/Panel/Center/Grid/Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
text = "InOut"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel3" type="Panel" parent="Margin/Panel/Center/Grid"]
minimum_size = Vector2(240, 240)
offset_top = 244.0
offset_right = 240.0
offset_bottom = 484.0

[node name="ColorRect1" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_right = 20.0
offset_bottom = 20.0

[node name="ColorRect2" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 20.0
offset_right = 20.0
offset_bottom = 40.0

[node name="ColorRect3" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 40.0
offset_right = 20.0
offset_bottom = 60.0

[node name="ColorRect4" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 60.0
offset_right = 20.0
offset_bottom = 80.0

[node name="ColorRect5" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 80.0
offset_right = 20.0
offset_bottom = 100.0

[node name="ColorRect6" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 100.0
offset_right = 20.0
offset_bottom = 120.0

[node name="ColorRect7" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 120.0
offset_right = 20.0
offset_bottom = 140.0

[node name="ColorRect8" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 140.0
offset_right = 20.0
offset_bottom = 160.0

[node name="ColorRect9" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 160.0
offset_right = 20.0
offset_bottom = 180.0

[node name="ColorRect10" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 180.0
offset_right = 20.0
offset_bottom = 200.0

[node name="ColorRect11" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 200.0
offset_right = 20.0
offset_bottom = 220.0

[node name="ColorRect12" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel3"]
offset_top = 220.0
offset_right = 20.0
offset_bottom = 240.0

[node name="Label" type="Label" parent="Margin/Panel/Center/Grid/Panel3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -13.0
offset_right = 22.5
offset_bottom = 13.0
text = "Out"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel4" type="Panel" parent="Margin/Panel/Center/Grid"]
minimum_size = Vector2(240, 240)
offset_left = 244.0
offset_top = 244.0
offset_right = 484.0
offset_bottom = 484.0

[node name="ColorRect1" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_right = 20.0
offset_bottom = 20.0

[node name="ColorRect2" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 20.0
offset_right = 20.0
offset_bottom = 40.0

[node name="ColorRect3" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 40.0
offset_right = 20.0
offset_bottom = 60.0

[node name="ColorRect4" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 60.0
offset_right = 20.0
offset_bottom = 80.0

[node name="ColorRect5" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 80.0
offset_right = 20.0
offset_bottom = 100.0

[node name="ColorRect6" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 100.0
offset_right = 20.0
offset_bottom = 120.0

[node name="ColorRect7" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 120.0
offset_right = 20.0
offset_bottom = 140.0

[node name="ColorRect8" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 140.0
offset_right = 20.0
offset_bottom = 160.0

[node name="ColorRect9" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 160.0
offset_right = 20.0
offset_bottom = 180.0

[node name="ColorRect10" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 180.0
offset_right = 20.0
offset_bottom = 200.0

[node name="ColorRect11" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 200.0
offset_right = 20.0
offset_bottom = 220.0

[node name="ColorRect12" type="ColorRect" parent="Margin/Panel/Center/Grid/Panel4"]
offset_top = 220.0
offset_right = 20.0
offset_bottom = 240.0

[node name="Label" type="Label" parent="Margin/Panel/Center/Grid/Panel4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -13.0
offset_right = 22.5
offset_bottom = 13.0
text = "OutIn"
horizontal_alignment = 1
vertical_alignment = 1
