extends Node

func _ready() -> void:
	# in
	_go($Panel1/ColorRect1, Tween.EASE_IN, Tween.TRANS_LINEAR)
	_go($Panel1/ColorRect2, Tween.EASE_IN, Tween.TRANS_SINE)
	_go($Panel1/ColorRect3, Tween.EASE_IN, Tween.TRANS_QUINT)
	_go($Panel1/ColorRect4, Tween.EASE_IN, Tween.TRANS_QUART)
	_go($Panel1/ColorRect5, Tween.EASE_IN, Tween.TRANS_QUAD)
	_go($Panel1/ColorRect6, Tween.EASE_IN, Tween.TRANS_EXPO)
	_go($Panel1/ColorRect7, Tween.EASE_IN, Tween.TRANS_ELASTIC)
	_go($Panel1/ColorRect8, Tween.EASE_IN, Tween.TRANS_CUBIC)
	_go($Panel1/ColorRect9, Tween.EASE_IN, Tween.TRANS_CIRC)
	_go($Panel1/ColorRect10, Tween.EASE_IN, Tween.TRANS_BOUNCE)
	_go($Panel1/ColorRect11, Tween.EASE_IN, Tween.TRANS_BACK)
	_go($Panel1/ColorRect12, Tween.EASE_IN, Tween.TRANS_SPRING)
	# # out
	_go($Panel2/ColorRect1, Tween.EASE_OUT, Tween.TRANS_LINEAR)
	_go($Panel2/ColorRect2, Tween.EASE_OUT, Tween.TRANS_SINE)
	_go($Panel2/ColorRect3, Tween.EASE_OUT, Tween.TRANS_QUINT)
	_go($Panel2/ColorRect4, Tween.EASE_OUT, Tween.TRANS_QUART)
	_go($Panel2/ColorRect5, Tween.EASE_OUT, Tween.TRANS_QUAD)
	_go($Panel2/ColorRect6, Tween.EASE_OUT, Tween.TRANS_EXPO)
	_go($Panel2/ColorRect7, Tween.EASE_OUT, Tween.TRANS_ELASTIC)
	_go($Panel2/ColorRect8, Tween.EASE_OUT, Tween.TRANS_CUBIC)
	_go($Panel2/ColorRect9, Tween.EASE_OUT, Tween.TRANS_CIRC)
	_go($Panel2/ColorRect10, Tween.EASE_OUT, Tween.TRANS_BOUNCE)
	_go($Panel2/ColorRect11, Tween.EASE_OUT, Tween.TRANS_BACK)
	_go($Panel2/ColorRect12, Tween.EASE_OUT, Tween.TRANS_SPRING)
	# # inout
	_go($Panel3/ColorRect1, Tween.EASE_IN_OUT, Tween.TRANS_LINEAR)
	_go($Panel3/ColorRect2, Tween.EASE_IN_OUT, Tween.TRANS_SINE)
	_go($Panel3/ColorRect3, Tween.EASE_IN_OUT, Tween.TRANS_QUINT)
	_go($Panel3/ColorRect4, Tween.EASE_IN_OUT, Tween.TRANS_QUART)
	_go($Panel3/ColorRect5, Tween.EASE_IN_OUT, Tween.TRANS_QUAD)
	_go($Panel3/ColorRect6, Tween.EASE_IN_OUT, Tween.TRANS_EXPO)
	_go($Panel3/ColorRect7, Tween.EASE_IN_OUT, Tween.TRANS_ELASTIC)
	_go($Panel3/ColorRect8, Tween.EASE_IN_OUT, Tween.TRANS_CUBIC)
	_go($Panel3/ColorRect9, Tween.EASE_IN_OUT, Tween.TRANS_CIRC)
	_go($Panel3/ColorRect10, Tween.EASE_IN_OUT, Tween.TRANS_BOUNCE)
	_go($Panel3/ColorRect11, Tween.EASE_IN_OUT, Tween.TRANS_BACK)
	_go($Panel3/ColorRect12, Tween.EASE_IN_OUT, Tween.TRANS_SPRING)
	# # outin
	_go($Panel4/ColorRect1, Tween.EASE_OUT_IN, Tween.TRANS_LINEAR)
	_go($Panel4/ColorRect2, Tween.EASE_OUT_IN, Tween.TRANS_SINE)
	_go($Panel4/ColorRect3, Tween.EASE_OUT_IN, Tween.TRANS_QUINT)
	_go($Panel4/ColorRect4, Tween.EASE_OUT_IN, Tween.TRANS_QUART)
	_go($Panel4/ColorRect5, Tween.EASE_OUT_IN, Tween.TRANS_QUAD)
	_go($Panel4/ColorRect6, Tween.EASE_OUT_IN, Tween.TRANS_EXPO)
	_go($Panel4/ColorRect7, Tween.EASE_OUT_IN, Tween.TRANS_ELASTIC)
	_go($Panel4/ColorRect8, Tween.EASE_OUT_IN, Tween.TRANS_CUBIC)
	_go($Panel4/ColorRect9, Tween.EASE_OUT_IN, Tween.TRANS_CIRC)
	_go($Panel4/ColorRect10, Tween.EASE_OUT_IN, Tween.TRANS_BOUNCE)
	_go($Panel4/ColorRect11, Tween.EASE_OUT_IN, Tween.TRANS_BACK)
	_go($Panel4/ColorRect12, Tween.EASE_OUT_IN, Tween.TRANS_SPRING)

	# start them on the far side so they come back first
	# dont start at 0 start inset 32 or whatever
func _go(c: CanvasItem, et: Tween.EaseType, tt: Tween.TransitionType) -> void:
	var t := create_tween()
	t.set_loops()
	t.set_ease(et).set_trans(tt)
	t.tween_interval(1)
	t.tween_property(c, "position", Vector2(c.position.x + 220, c.position.y), 2.2)
	t.tween_interval(1)
	t.tween_property(c, "position", c.position, 2.2)
